--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -36,7 +36,7 @@ body
     margin: 0px;
     position:relative;
 
-    background: #010223;
+    background: #f10223;
 }
 /*
 body::-webkit-scrollbar
