--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -85,7 +85,7 @@
                     </div>
                     <div id="cell" style="background-color: #842586;">
                         <div id="thumbnail-wrapper">
-                            <img src="images/4.png"/>
+                            <img src="images/projects/4.png"/>
                         </div>
                         
                         <div id="thumbnail-text">
