--- a/root/styles/index.css
+++ b/root/styles/index.css
@@ -1,6 +1,6 @@
 :root
 {
-    font-size: 30px;
+    font-size: max(1.5vw, 1.5vh);
     font-family: Viga;
     --font-color-darker: #888;
     --font-color: #ccc;
@@ -39,7 +39,29 @@ body.preload *{
 
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+}
+
+.text-wrapper
+{
+    display: flex;
+
+    flex-direction: column;
     flex-wrap: wrap;
+
+    width: 50%;
+    position: relative;
+    left: 5%;
+}
+
+.links-wrapper
+{
+    display: flex;
+    flex-direction: column;
+    width: calc(15% + 5rem);
+
+    position: relative;
+    right: 5%;
 }
 
 .name-wrapper
@@ -47,6 +69,57 @@ body.preload *{
     display: flex;
     flex-direction: column;
 }
+
+@media (max-width: 750px) 
+{
+    :root
+    {
+        font-size: 22px;
+    }
+
+    .first-wrapper
+    {
+        flex-direction: column;
+        align-items: center;
+
+        margin-top: 2vh;
+    }
+
+    .text-wrapper
+    {
+        width: 90%;
+        left: 0;
+    }
+
+    .links-wrapper
+    {
+        margin-top: 20%;
+        width: 70%;
+        right: 0;
+    }
+
+    .name-wrapper
+    {
+        text-align: center;
+    }
+
+    .text 
+    {
+        text-align: center;
+    }
+
+    header
+    {
+        visibility: hidden !important;
+    }
+
+    .intro 
+    {
+        align-items: center !important;
+        justify-content: center !important;
+    }
+}
+
 
 .name-wrapper .name
 {
@@ -80,7 +153,7 @@ header .text
     font-family: Bungee;
 
     font-size: 0.75rem;
-    line-height: 29px;
+    line-height: 1rem;
 
     text-align: center;
 
@@ -108,40 +181,16 @@ header .text
     width: 80%;
 }
 
-.text-wrapper
-{
-    display: flex;
-    position: relative;
-    top: 5%;
-    left: 5%;
-
-    flex-direction: column;
-    flex-wrap: wrap;
-
-    width: 50%;
-}
-
 .menu
 {
     width: 100%;
-}
-
-
-.links-wrapper
-{
-    display: flex;
-    flex-direction: column;
-    width: calc(15% + 5rem);
-
-    position: relative;
-    left: 10%;
 }
 
 .link 
 {
     padding: 0.4rem;
     border-radius: 0.4rem;
-    border: 2px solid var(--font-color-darker);
+    border: 0.12rem solid var(--font-color-darker);
     
     margin: 0.2rem;
     display: flex;
@@ -163,7 +212,7 @@ header .text
 
     to 
     {
-        box-shadow: inset 0px 0px 0.5rem 0px var(--glow-color), 0px 0px 0.5rem 0px var(--glow-color);
+        box-shadow: inset 0 0 0.5rem 0 var(--glow-color), 0 0 0.5rem 0 var(--glow-color);
     }
 }
 
@@ -171,7 +220,7 @@ header .text
 {
     from 
     {
-        box-shadow: inset 0px 0px 0.5rem 0px var(--glow-color), 0px 0px 0.5rem 0px var(--glow-color);
+        box-shadow: inset 0 0 0.5rem 0 var(--glow-color), 0px 0 0.5rem 0 var(--glow-color);
     }
 
     to 
@@ -189,7 +238,7 @@ header .text
 .link svg 
 {
     stroke: var(--font-color);
-    transition: stroke var(--animation-time) ease 25ms;
+    transition: stroke var(--animation-time) ease;
 }
 
 .links-wrapper img, svg
