--- a/root/styles/index.css
+++ b/root/styles/index.css
@@ -87,14 +87,14 @@ body.preload *{
 
     .text-wrapper
     {
-        width: 90%;
+        width: 95%;
         left: 0;
     }
 
     .links-wrapper
     {
         margin-top: 20%;
-        width: 70%;
+        width: calc(76% + 0.6rem); /* (80 % * 95%) */
         right: 0;
     }
 
@@ -105,7 +105,7 @@ body.preload *{
 
     .text 
     {
-        text-align: center;
+        text-align: justify;
     }
 
     header
