--- a/styles/projects.css
+++ b/styles/projects.css
@@ -123,3 +123,40 @@ li
 {
     flex-wrap: nowrap;
 }
+
+@keyframes pulse-and-fade
+{
+    0%  {opacity: 1;}
+    20% {opacity: 0.2;}
+    60% {opacity: 1;}
+    99% {opacity: 0; z-index: 888;}
+    100%{opacity: 0; display: none; z-index: -9999;}
+}
+
+.helper
+{
+    width: 2rem;
+    height: 2rem;
+    
+    position: fixed;
+    bottom: 1rem;
+    left: calc(50% - 1rem);
+
+    border: none;
+
+    z-index: 888;
+
+    animation: pulse-and-fade 8s;
+    animation-fill-mode: forwards;
+}
+
+.helper svg 
+{
+    height: 100%;
+    width: 100%;
+
+    stroke: var(--font-color);
+    transition: stroke var(--animation-time) ease;
+
+    cursor: pointer;
+}
