--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,3 +1,5 @@
+/* Desktop styles */
+
 :root
 {
     --intro-width: 80%;
@@ -162,6 +164,8 @@ hr
 
     cursor: pointer;
 }
+
+/* Mobile styles */
 
 @media (max-aspect-ratio: 1/1)
 {
