--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,7 +57,15 @@ body
 body::-webkit-scrollbar { background-color: rgba(128,128,128,0.15); }
 body::-webkit-scrollbar-thumb { background-color: rgba(128,128,128,0.5); }
 
-a {text-decoration: none !important;}
+a 
+{
+    text-decoration: none !important;
+}
+
+ul 
+{
+    padding-left: 1.4rem;
+}
 
 .first-wrapper, .first-following-wrapper
 {
